Use display inline instead of float for the nav. This fixes a vertical alignment problem with 'En Espanol'.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -80,6 +80,8 @@ body {
 		font-size: 1em;
 	}
 	.nav > li {
+		display: inline;
+		float: none;
 		a {
 			display: inline-block;
 			padding: 0px;
